# shmup

./: .gitignore  CMakeLists.txt  README.md
assets/: .gitkeep
include/: Enemy.h  Game.h  IsometricUtils.h  Path.h  Projectile.h  Ship.h  ShootingPattern.h
src/: Enemy.cpp  Game.cpp  IsometricUtils.cpp  Path.cpp  Projectile.cpp  Ship.cpp  ShootingPattern.cpp  main.cpp
